fix(web-components): update colours and colour tokens to match v3 dark mode Figma file
Update colours and colour tokens to match v3 dark mode Figma file

--- a/packages/web-components/src/components/ic-dialog/ic-dialog.css
+++ b/packages/web-components/src/components/ic-dialog/ic-dialog.css
@@ -104,7 +104,7 @@
 }
 
 .close-icon > svg {
-  color: var(--ic-dialog-icon);
+  color: var(--ic-dialog-clear-button);
 }
 
 .content-area {
